# advent_of_code_2025

./: Cargo.toml
aoc_2025/: Cargo.toml
aoc_2025/src/: main.rs
day-01/src/: lib.rs
day-02/src/: lib.rs
day-03/src/: lib.rs
day-04/: Cargo.toml
day-04/src/: lib.rs
day-05/src/: lib.rs
day-06/src/: lib.rs
day-07/src/: lib.rs
day-08/src/: lib.rs
day-09/: Cargo.toml
day-09/src/: lib.rs
